src/other/mico-2.3.12/test/idl/error/expected-stderr-case6.idl
case6.idl:8: can not coerce 'boolean' to 'char'
